# APCSP-CreateTask

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.json  inputData.csv  pythonData.csv  questions.txt  test.py
Backend/Cpp/: ArrayConfigs.hpp  Parse.cpp  Parse.hpp  SortData.hpp  bubble.cpp  bubble.hpp  empty.cpp  insertion.hpp  main.cpp  run.cpp
Backend/Python/: bubbleSort.py  globalVariables.py  insertionSort.py  mergeSort.py  parseData.py  selectionSort.py  test.py
Data/: inputData.csv  pythonData.csv
Frontend/: dataHandler.cpp  dataHandler.h  dataHandler.hpp  generateDataGraph.cpp  generateDataGraph.hpp  main.cpp
frontend/: fileHandler.js  index.html  install.md  main.js  mystyle.css  output.csv  package.json  renderer.js
frontend/C++/: main.cpp
